updated .gitconfig path

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-	excludesfile = /Users/christracey/.gitignore
+  excludesfile = /Users/tracer/.gitignore
 [user]
 	name = Chris Tracey
 	email = tracey.chris@gmail.com
