--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,12 @@
 [submodule ".vim/bundle/ag.vim"]
 	path = .vim/bundle/ag.vim
 	url = git://github.com/rking/ag.vim
+[submodule ".vim/bundle/matchit"]
+	path = .vim/bundle/matchit
+	url = git@github.com:tmhedberg/matchit.git
+[submodule ".vim/bundle/ruby-matchit"]
+	path = .vim/bundle/ruby-matchit
+	url = git@github.com:vim-scripts/ruby-matchit.git
+[submodule ".vim/bundle/rspec"]
+	path = .vim/bundle/rspec
+	url = git@github.com:Keithbsmiley/rspec.vim.git
